--- a/attorney.html
+++ b/attorney.html
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">GINTARE GRIGAITE, ESQ.</a></h3>
+                            <h3 class="title"><a href="GINTARE_detail.html">GINTARE GRIGAITE, ESQ.</a></h3>
                             <span class="position">Real State Lawyer</span>
                         </div>
                     </div>
