--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
             <div class="about-us">
                 <h5 class="panel-widget-title">About Us</h5>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore ipsam alias quae cupiditate quas,
-                    neque eum magni impedit asperiores ad id sint repudiandae quaerat, omnis commodi consequatur dolore
-                    rerum deleniti!
+                    Lead Attorney, Gintare Grigaite, Esq. succeeds in winning precedential immigration case before U.S. Court of Appeals for the Third Circuit, in <a href="https://www2.ca3.uscourts.gov/opinarch/201778p.pdf" target="_blank">Baljinder Singh v. Attorney General</a>
                 </p>
             </div>
             <div class="contact-us">
