--- a/attorney.html
+++ b/attorney.html
@@ -235,7 +235,7 @@
     <!--====== Start Hero Area ======-->
     <section class="hero-area">
         <div class="breadcrumbs-area bg_cover bg-with-overlay"
-            style="background-image: url(assets/images/bg/breadcrumbs-bg.jpg);">
+            style="background-image: url(assets/images/hero/Slide-7.jpg)">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="GINTARE_detail.html">GINTARE GRIGAITE, ESQ.</a></h3>
+                            <h3 class="title"><a href="./GINTARE_detail.html">GINTARE GRIGAITE, ESQ.</a></h3>
                             <span class="position">Real State Lawyer</span>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".3s">
                         <div class="team-img">
-                            <img src="assets/images/team/Letitia_James.png" alt="Team">
+                            <img src="assets/images/team/10year.png" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -293,8 +293,8 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Letitia James</a></h3>
-                            <span class="position">Incumbent</span>
+                            <h3 class="title"><a href="./Adam.html">Adam B. Reisman, Esq.</a></h3>
+                            <span class="position">Real Estate Law</span>
                         </div>
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".5s">
                         <div class="team-img">
-                            <img src="assets/images/team/Acting_USA_Yoon_Kim.jpg" alt="Team">
+                            <img src="assets/images/team/10year.png" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -335,15 +335,15 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Joon Kim</a></h3>
-                            <span class="position">United States Attorney</span>
+                            <h3 class="title"><a href="./Shokry.html">Shokry G. Abdelsayed, ESQ</a></h3>
+                            <span class="position">Criminal Law</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".6s">
                         <div class="team-img">
-                            <img src="assets/images/team/Kamala_Harris.jpg" alt="Team">
+                            <img src="assets/images/team/JAZMIN_BATISTA.jpg" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -356,15 +356,16 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Kamala Harris</a></h3>
-                            <span class="position">Incumbent</span>
+                            <h3 class="title"><a href="attorney-details.html">JAZMIN BATISTA</a></h3>
+                            <span class="position">Paralegal
+                                Immigration </span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".7s">
                         <div class="team-img">
-                            <img src="assets/images/team/GeneralMerrick.jpg" alt="Team">
+                            <img src="assets/images/team/LEONOR_GONZALEZ.jpg" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -377,15 +378,16 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Merrick Garland</a></h3>
-                            <span class="position">Incumbent</span>
+                            <h3 class="title"><a href="attorney-details.html">LEONOR GONZALEZ</a></h3>
+                            <span class="position">Paralegal
+                                Immigration</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".8s">
                         <div class="team-img">
-                            <img src="assets/images/team/CyrusVance.jpg" alt="Team">
+                            <img src="assets/images/team/AURA_ZENO.jpg" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -398,15 +400,16 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Cyrus Vance Jr.</a></h3>
-                            <span class="position">District Attorney</span>
+                            <h3 class="title"><a href="attorney-details.html">AURA ZENO</a></h3>
+                            <span class="position">Paralegal
+                                Real Estate & Municipal</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="team-item team-item-one mb-40 wow fadeInUp" data-wow-delay=".9s">
                         <div class="team-img">
-                            <img src="assets/images/team/Michael_J._Garcia.jpg" alt="Team">
+                            <img src="assets/images/team/HAYDEE_SORIANO.jpg" alt="Team">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <ul class="social-link">
@@ -419,8 +422,9 @@
                             </div>
                         </div>
                         <div class="team-content">
-                            <h3 class="title"><a href="attorney-details.html">Michael Garcia</a></h3>
-                            <span class="position">Incumbent</span>
+                            <h3 class="title"><a href="attorney-details.html">HAYDEE SORIANO</a></h3>
+                            <span class="position">Paralegal
+                                Real Estate, Family, Immigration </span>
                         </div>
                     </div>
                 </div>
@@ -537,7 +541,7 @@
     </section>
     <!--====== End Skill Section ======-->
     <section class="cta-area bg-with-overlay bg-with-overlay-two pt-120 pb-120 bg_cover"
-        style="background-image: url(assets/images/bg/cta-bg-2.jpg);">
+        style="background-image: url(assets/images/hero/Slide-1.jpg);">
         <div class="container">
             <div class="row cta-wrapper-three justify-content-center">
                 <div class="col-lg-8">
